syntax = "proto3";
package com.antigravity;

import "client/model.proto";

option java_package = "com.antigravity.proto";
option java_multiple_files = true;
option java_outer_classname = "TeamModelProto";

message TeamModel {
  Model model = 1;
  string name = 2;
  string avatarUrl = 3;
  repeated string driver_ids = 4;
}
